[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/CharacterCreation.gd" type="Script" id=1]
[ext_resource path="res://assets/characterart/mirror.png" type="Texture" id=2]
[ext_resource path="res://assets/characterart/blface.png" type="Texture" id=3]
[ext_resource path="res://themes/new_theme.tres" type="Theme" id=4]

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_left = 145.0
margin_right = 364.0
margin_bottom = 33.0
size_flags_horizontal = 4
theme = ExtResource( 4 )
text = "select skin color?"
align = 1

[node name="OptionButtonColor" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
margin_left = 212.0
margin_top = 37.0
margin_right = 297.0
margin_bottom = 76.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Blue"
items = [ "Blue", null, false, 0, null, "Green", null, false, 1, null, "Red", null, false, 2, null ]
selected = 0

[node name="buttonFinish" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_left = 93.0
margin_top = 80.0
margin_right = 417.0
margin_bottom = 119.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Finish character creation"

[node name="buttonMainMenu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_left = 178.0
margin_top = 123.0
margin_right = 331.0
margin_bottom = 162.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Main menu"

[node name="backgroundArt" type="TextureRect" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="characterArt" type="TextureRect" parent="HBoxContainer/backgroundArt"]
margin_left = 222.0
margin_top = 412.0
margin_right = 322.0
margin_bottom = 512.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/OptionButtonColor" to="." method="_on_OptionButtonColor_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/buttonFinish" to="." method="_on_buttonFinish_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/buttonMainMenu" to="." method="_on_buttonMainMenu_pressed"]
